<resources>
    <string-array name="menu">
        <item>Configurações</item>
        <item>Ajuda</item>
    </string-array>
    <string name="invalid_in">Entrada inválida</string>
    <string name="erro_carregar_img">Erro ao carregar imagem</string>
    <string name="erro_desconhecido">Ocorreu algum erro</string>
    <string name="processing">Carregando...</string>
    <string name="login_fail">Falha no login</string>
    <string name="email_senha_invalid">Email ou senha inválidos</string>
    <string name="information">Informações</string>
    <string name="deletando">Deletando</string>
    <string name="marcar_tudo">Checar tudo</string>
    <string name="menu_deletar">Deletar</string>
    <string name="app_name">SistranMobile</string>
    <string name="folder_app">SistranMobile</string>
    <string name="menu_config">Configurações</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">logo</string>
    <string name="letras_da_placa">Letras da placa</string>
    <string name="numeros_da_placa">Números da placa</string>
    <string name="mensagem_erro_letra_placa">Insira 3 letras para a placa</string>
    <string name="mensagem_erro_numero_placa">Insira 4 números para a placa</string>
    <string name="digitacao_invalida">Entrada inválida</string>
    <string name="dados_da_cnh">Insira os dados da CNH</string>
    <string name="nome_proprietario_cnh_ppd">Nome ou CPF da CNH</string>
    <string name="natureza_format">Natureza:</string>
    <string name="pontos_format">Pontuação:</string>
    <string name="valor_format">Valor:</string>
    <string name="responsavel_format">Responsável:</string>
    <string name="medidas_format">Medida(s) administrativa(s):</string>
    <string name="obs_format">Observações:</string>
    <string name="notas_format">Informações:</string>
    <string name="competencia_format">Comptetência:</string>
    <string name="pontos">pontos</string>
    <string name="cifrao_format">R$:&#160;</string>
    <string name="search_infracao">Pesquise infraçoes</string>
    <string name="auto_governo">GOVERNO DO ESTADO</string>
    <string name="auto_segup">SECRETARIA DE SEGURANÇA PÚBLICA</string>
    <string name="auto_detran">DEPARTAMENTO DE TRÂNSITO</string>
    <string name="auto_ait">AUTO DE INFRAÇÃO DE TRÂNSITO - AIT</string>
    <string name="auto_orgao">CÓD. ÓRGÃO</string>
    <string name="auto_numero">NÚMERO</string>
    <string name="auto_identificacao_veiculo">IDENTIFICAÇÃO DO VEÍCULO</string>
    <string name="auto_placa_veiculo">PLACA</string>
    <string name="auto_chassi">CHASSI</string>
    <string name="auto_marca">MARCA</string>
    <string name="auto_modelo">MODELO</string>
    <string name="auto_especie">ESPÉCIE</string>
    <string name="auto_categoria">CATEGORIA</string>
    <string name="auto_nome_condutor">CONDUTOR</string>
    <string name="auto_registro_cnh">CNH/PPD/ACC</string>
    <string name="auto_uf_cnh">UF</string>
    <string name="auto_identificacao_local">IDENTIFICAÇÃO DO LOCAL</string>
    <string name="auto_local">LOCAL</string>
    <string name="auto_municipio">MUNICÍPIO/UF</string>
    <string name="auto_data">DATA</string>
    <string name="auto_hora">HORA</string>
    <string name="auto_medidas_adm">MEDIDA(S) ADMINISTRATIVA(S)</string>
    <string name="auto_titulo_infracao">TIPIFICAÇÃO DA INFRAÇÃO</string>
    <string name="auto_cod_infracao">CÓD. INFRAÇÃO</string>
    <string name="auto_amparo">AMPARO LEGAL</string>
    <string name="auto_descricao">DESCRIÇÃO DA INFRAÇÃO</string>
    <string name="auto_obs">OBSERVAÇÕES</string>
    <string name="auto_titulo_agente">AUTORIDADE/AGENTE AUTUADOR</string>
    <string name="auto_nome_agente">NOME</string>
    <string name="auto_matricula">MATRÍCULA</string>
    <string name="placa_format">Placa :&#160;</string>
    <string name="uf_format">UF :&#160;</string>
    <string name="municipio_format">Município :&#160;</string>
    <string name="chassi_format">Chassi :&#160;</string>
    <string name="marca_format">Marca :&#160;</string>
    <string name="modelo_format">Modelo :&#160;</string>
    <string name="cor_format">Cor :&#160;</string>
    <string name="tipo_format">Tipo :&#160;</string>
    <string name="especie_format">Espécie :&#160;</string>
    <string name="categoria_format">Categoria :&#160;</string>
    <string name="ano_licenciamento_format">Ano Licenciamento :&#160;</string>
    <string name="data_licenciamento_format">Data Licenciamento :&#160;</string>
    <string name="licenciamento_format">Licenciamento :&#160;</string>
    <string name="ipva_format">IPVA :&#160;</string>
    <string name="seguro_format">Seguro :&#160;</string>
    <string name="multas_format">Multas :&#160;</string>
    <string name="impedimento_format">Impedimento admin. :&#160;</string>
    <string name="furto_format">Registro de furto :&#160;</string>
    <string name="restricoes_format">Restricoes :&#160;</string>
    <string name="date_format">Data da consulta :&#160;</string>
    <string name="motor_format">Número do motor :&#160;</string>
    <string name="lacre_format">Número do lacre :&#160;</string>
    <string name="model">Modelo do veículo</string>
    <string name="marca">Marca do veículo</string>
    <string name="consulta_off_line">Consulta off-line</string>
    <string name="lets_go">Iniciar operações</string>
    <string name="login_hint">Login no sistema</string>
    <string name="email">Email</string>
    <string name="login_login"><b><i>Login</i></b></string>
    <string name="password">Senha</string>
    <string name="login">Logar</string>
    <string name="register">Cadastrar</string>
    <string name="forgetPassword">Lembrar senha?</string>
    <string name="name">Nome</string>
    <string name="orgao_transito">Órgão de trânsito</string>
    <string name="novo_cadastro">Assinar</string>
    <string name="cpf">CPF</string>
    <string name="registro_hint">Cadastrar no sistema</string>
    <string name="registro_concluido">Cadastro no sistema efetuado com sucesso</string>
    <string name="registro_nao_concluido">Erro ao cadastrar no sistema</string>
    <string name="texto_inserir_email">Insira seu email</string>
    <string name="texto_inserir_senha">Insira sua senha</string>
    <string name="mantenha_me_logado">Mantenha-me</string>
    <string name="nehum_resultado_retornado">Nenhum dado retornado</string>
    <string name="ok_dialog">Ok</string>
    <string name="calcel_dialog">Cancelar</string>
    <string name="auto_de_infracao">Auto de infração</string>
    <string name="infracao">Infração</string>
    <string name="veiculo_estrangeiro">Veículo estrangeiro</string>
    <string name="sem_abordagem">Condutor não abordado</string>
    <string name="condutor_nao_habilitado">Condutor não habilitado</string>
    <string name="condutor_estrangeiro">Condutor estrangeiro</string>
    <string name="outra_documentacao">Outra documentação</string>
    <string name="condutor">Condutor</string>
    <string name="endereco">Endereço</string>
    <string name="texto_titulo_cpf">Consultar renach</string>
    <string name="acesso_ao_sistransito">Consultar renavam</string>
    <string name="off_line_search">Consulta off-line</string>
    <string name="encrypt_key">SandroACosta</string>
    <string name="sem_conexao">Sem conexão com a internet</string>
    <string name="erro_input">Dados inválidos</string>
    <string name="carregando">Pesquisando &#8230;&#8230;&#8230;\n</string>
    <string name="erro_login">Login ou senha inválido</string>
    <string name="impressao">Módulo de impressão</string>
    <string name="matricula">Matrícula</string>
    <string name="nome">Nome</string>
    <string name="orgao_de_transito">Órgão de trânsito</string>
    <string name="logout">Logout</string>
    <string name="autos_restantes">Autos restantes</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="rb_amostra">Número da amostra</string>
    <string name="rb_tca">Número do TCA</string>
    <string name="rb_cpf_embarcador">CPF</string>
    <string name="rb_cnpj_embarcador">CNPJ</string>
    <string name="rb_cpf_transportador">CPF</string>
    <string name="rb_cnpj_transportador">CNPJ</string>
    <string name="numero_cpf_transportador">CPF transportador</string>
    <string name="numero_cnpj_transportador">CNPJ transportador</string>
    <string name="numero_cpf_embarcador">CPF embarcador</string>
    <string name="numero_cnpj_embarcador">CNPJ embarcador</string>
    <string name="cpf_embarcador_invalido">CPF embarcador inválido</string>
    <string name="cnpj_embarcador_invalido">CNPJ embarcador inválido</string>
    <string name="cpf_tranportador_invalido">CPF tranportador inválido</string>
    <string name="cnpj_tranportador_invalido">CNPJ tranportador inválido</string>
    <string name="msg_erro">Mensagem</string>
    <string name="limite_regulamentado">Limite regulamentado</string>
    <string name="cb_confirmar">Li e confirmo os dados</string>
    <string name="titulo_cancelar">Cancelamento de Auto</string>
    <string name="auto_justificativa">Digite uma justiticativa</string>
    <string name="texto_inserir_local">Insira o endereço</string>
    <string name="texto_inserir_municipio">Insira o município</string>
    <string name="texto_inserir_data">Campo data é obrigatório</string>
    <string name="texto_inserir_hora">Campo hora é obrigatório</string>
    <string name="texto_inserir_infracao">Insira a infração cometida</string>
    <string name="update_veiculo">Erro na atualização dos dados do veículo</string>
    <string name="update_condutor">Erro na atualização dos dados do condutor</string>
    <string name="update_endereco">Erro na atualização dos dados de endereço</string>
    <string name="update_infracao">Erro na atualização dos dados de infração</string>
    <string name="update_fotos">Erro na atualização das fotos da infração</string>
    <string name="texto_tca">Termo de Comprovação de Alcoolemia</string>
    <string name="tca_title">Termo de Comprovação de Alcoolemia - TCA</string>
    <string name="tca_subtitle_1">Condutor/Veículo</string>
    <string name="tca_subtitle_2">Questionário</string>
    <string name="tca_conferir">Conferir</string>
    <string name="tca_gerar">Gerar</string>
    <string name="tca_relato_quanto_condutor">Relato Quanto ao Estado do Condutor</string>
    <string name="nome_da_empresa">Nome da empresa</string>
    <string name="nome_do_condutor_do_guincho">Nome do condutor do guincho</string>
    <string name="odometro">Kilometragem do veículo</string>
    <string name="marcador_de_combustivel">Marcador de combustível</string>
    <string name="danificado">&#160;Danificado</string>
    <string name="vazio">&#160;Vazio</string>
    <string name="um_quarto">&#160;&#188;</string>
    <string name="tres_quarto"> &#160;&#189;</string>
    <string name="meio_tanque"> &#160;&#190;</string>
    <string name="cheio">&#160;Cheio</string>
    <string name="remocao_atraves_de">Remoção através de:</string>
    <string name="botao_conferir">Conferir</string>
    <string name="observacao">Observação</string>
    <string name="gerar">Gerar</string>
    <string name="vibrate">Vibrar</string>
    <string name="vibrate_hint">Vibrar o dispositivo quando o status for atrasado</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_hint">Ringing quando o status for atrasado</string>
    <string name="auto_backup">Auto backup</string>
    <string name="auto_backup_hint">Backup do resultado da pesquisa</string>
    <string name="titulo_sincronizacao">Replicar dados</string>
    <string name="strat_sync">Iniciar sincronização</string>
    <string name="strat_sync_info">Sincronizar base de dados com webserver</string>
    <string name="config_geral">Configurações Gerais</string>
    <string name="config_backup">Configuração de Backup</string>
</resources>